--- a/src/app/user/blood-preasure/blood-preasure.component.html
+++ b/src/app/user/blood-preasure/blood-preasure.component.html
@@ -16,8 +16,8 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let row of tableData2.dataRows" >
-                               <td *ngFor="let cell of row ; let i = index" ><ng-container *ngIf="i==0 || i==4">  {{cell}} </ng-container> 
-                                <ng-container *ngIf="i!=0 && i!=4"> 
+                               <td *ngFor="let cell of row ; let i = index" ><ng-container *ngIf="i==0">  {{cell}} </ng-container> 
+                                <ng-container *ngIf="i!=0"> 
                                 	<span [ngStyle]=getStyle(cell)>{{sist(cell)}} </span> 
                                 	/ 
                                 	<span [ngStyle]=getStyleDist(cell)>{{sistDist(cell)}} </span>
@@ -31,30 +31,33 @@
                 </div>
             </div>
         </div>
-                                <form>
+                            <form (submit)="onSubmit()">
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>Data</label>
-                                        <input type="date" class="form-control border-input"  value="">
+                                        <input [(ngModel)]="newMeasure.date" type="date" name="date" class="form-control border-input">
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Sistolica</label>
-                                        <input type="text" class="form-control border-input" placeholder="" value="">
+                                        <input [(ngModel)]="newMeasure.sist" name="sist" type="number" class="form-control border-input">
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Distolica</label>
-                                        <input type="email" class="form-control border-input" placeholder="">
+                                        <input [(ngModel)]="newMeasure.dist" name="dist" type="number" class="form-control border-input">
                                     </div>
                                 </div>
                                  <div class="col-md-2">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">FC</label>
-                                        <input type="email" class="form-control border-input" placeholder="">
+                                        <label>Altura do dia</label>
+                                        <br>
+                                       <select [(ngModel)]="newMeasure.day" name="day" class="form-control" (change)="onChange($event.target.value)">
+											    <option *ngFor="let i of timeOfDay">{{i}}</option>
+										</select>
                                     </div>
                                 </div>
                             </div>
