--- a/src/app/shared/fixedplugin/fixedplugin.component.html
+++ b/src/app/shared/fixedplugin/fixedplugin.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-plugin">
+<!-- <div class="fixed-plugin">
     <div class="dropdown show-dropdown">
         <a href="#" data-toggle="dropdown">
         <i class="fa fa-cog fa-2x"> </i>
@@ -12,7 +12,7 @@
                 </a>
             </li>
 
-			<li class="header-title">Sidebar Active Color</li>
+			<!-- <li class="header-title">Sidebar Active Color</li>
             <li class="adjustments-line text-center">
                 <a href="javascript:void(0)" class="switch-trigger active-color">
                         <span class="badge filter badge-primary" data-color="primary"></span>
@@ -21,8 +21,8 @@
                         <span class="badge filter badge-warning" data-color="warning"></span>
                         <span class="badge filter badge-danger active" data-color="danger"></span>
                 </a>
-            </li>
+            </li> -->
 
-        </ul>
+        <!-- </ul>
     </div>
-</div>
+</div> --> 
