--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -33,69 +33,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Team Members</h4>
-                    </div>
-                    <div class="content">
-                        <ul class="list-unstyled team-members">
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-0.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                DJ Khaled
-                                                <br />
-                                                <span class="text-muted"><small>Offline</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-1.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                Creative Tim
-                                                <br />
-                                                <span class="text-success"><small>Available</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                <div class="avatar">
-                                                    <img src="assets/img/faces/face-3.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                Flume
-                                                <br />
-                                                <span class="text-danger"><small>Busy</small></span>
-                                            </div>
-
-                                            <div class="col-xs-3 text-right">
-                                                <button class="btn btn-sm btn-success btn-icon"><i class="fa fa-envelope"></i></button>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                    </div>
-                </div>
             </div>
             <div class="col-lg-8 col-md-7">
                 <div class="card">
@@ -185,12 +122,17 @@ But that's the difference in our opinions.</textarea>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-info btn-fill btn-wd">Update Profile</button>
                             </div>
+                            <div>
+                            <a [routerLink]="[route]">
+                                <span class="ti-heart-broken"></span><span class="icon-name"> Pressão arterial</span>
+                            </a>
+                        </div>
                             <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
             </div>
 
-
+            
         </div>
     </div>
