--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -126,6 +126,9 @@
                                 <div class="col-md-4">
                                     <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route2]">Pressão arterial</button>
                                 </div>
+                                <div class="col-md-4">
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route3]">Medicação</button>
+                                    </div>
                             </div>
                             <div class="clearfix"></div>
                         </form>
