--- a/src/app/user/notes/notes.component.html
+++ b/src/app/user/notes/notes.component.html
@@ -74,13 +74,15 @@
   </div>
 </div>
 <br>
- <div [ngSwitch]="view">
+<div [ngSwitch]="view">
   <mwl-calendar-month-view
     *ngSwitchCase="'month'"
     [viewDate]="viewDate"
     [events]="events"
-    [activeDayIsOpen]="true"
     [refresh]="refresh"
+    [activeDayIsOpen]="activeDayIsOpen"
+    (dayClicked)="dayClicked($event.day)"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
     (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-month-view>
   <mwl-calendar-week-view
@@ -88,6 +90,7 @@
     [viewDate]="viewDate"
     [events]="events"
     [refresh]="refresh"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
     (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-week-view>
   <mwl-calendar-day-view
@@ -95,6 +98,7 @@
     [viewDate]="viewDate"
     [events]="events"
     [refresh]="refresh"
+    (eventClicked)="handleEvent('Clicked', $event.event)"
     (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-day-view>
 </div>
