--- a/src/app/user/notes/notes.component.html
+++ b/src/app/user/notes/notes.component.html
@@ -1,25 +1,3 @@
-<ng-template #modalContent let-close="close">
-  <div class="modal-header">
-    <h5 class="modal-title">Event action occurred</h5>
-    <button type="button" class="close" (click)="close()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div>
-      Action:
-      <pre>{{ modalData?.action }}</pre>
-    </div>
-    <div>
-      Event:
-      <pre>{{ modalData?.event | json }}</pre>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="close()">OK</button>
-  </div>
-</ng-template>
-
 <div class="row text-center">
   <div class="col-md-4">
     <div class="btn-group">
@@ -29,13 +7,13 @@
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false">
-        Previous
+        Anterior
       </div>
       <div
         class="btn btn-outline-secondary"
         mwlCalendarToday
         [(viewDate)]="viewDate">
-        Today
+        Hoje
       </div>
       <div
         class="btn btn-primary"
@@ -43,12 +21,12 @@
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false">
-        Next
+        Seguinte
       </div>
     </div>
   </div>
   <div class="col-md-4">
-    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'pt' }}</h3>
   </div>
   <div class="col-md-4">
     <div class="btn-group">
@@ -56,19 +34,19 @@
         class="btn btn-primary"
         (click)="view = 'month'"
         [class.active]="view === 'month'">
-        Month
+        Mês
       </div>
       <div
         class="btn btn-primary"
         (click)="view = 'week'"
         [class.active]="view === 'week'">
-        Week
+        Semana
       </div>
       <div
         class="btn btn-primary"
         (click)="view = 'day'"
         [class.active]="view === 'day'">
-        Day
+        Dia
       </div>
     </div>
   </div>
@@ -102,3 +80,34 @@
     (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-day-view>
 </div>
+  <div class="container-fluid">
+        <form (submit)="onSubmit()">
+        <div class="row">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label>Data</label>
+                    <input [(ngModel)]="newNote.date" type="date" name="date" class="form-control border-input">
+                </div>
+            </div>
+            <div class="col-md-2">
+              <label>Cor</label>
+              <input class="form-control border-input"
+          type="color"
+          [(ngModel)]="newNote.color"
+          name="color"
+             >
+            </div>
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label>Nota</label>
+                    <textarea [(ngModel)]="newNote.text" name="text"  class="form-control border-input">
+                      {{newNote.text}}
+                      </textarea>
+                      
+                </div>
+            </div>
+            <button type="submit" class="btn btn-info btn-fill btn-wd">Inserir</button>
+        </div>
+        <div class="clearfix"></div>
+    </form>
+  </div>
