--- a/src/app/user/report/report.component.html
+++ b/src/app/user/report/report.component.html
@@ -22,7 +22,7 @@
                 <div class="card ">
                     <div class="header">
                     <h4 class="title">Pressão arterial</h4>
-                    <p class="category">Valores do João</p>
+                    <p class="category">Valores do António Silva</p>
                 </div>
                 <div class="content table-responsive table-full-width">
                     <!--<table class="table table-hover"> -->
