--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -130,6 +130,17 @@
                                         <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route3]">Medicação</button>
                                     </div>
                             </div>
+                            <div class="row">
+                                    <div class="col-md-4">
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route4]">Relatório</button>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route5]">Notas</button>
+                                    </div>
+                                    <div class="col-md-4">
+                                            <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route3]">Frequência Cardíaca</button>
+                                        </div>
+                                </div>
                             <div class="clearfix"></div>
                         </form>
                     </div>
