--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,49 +1,30 @@
     <div class="container-fluid">
         <div class="card">
             <div class="header">
-                <h4 class="title">Notifications</h4>
-                <p class="category">Handcrafted by our friend <a target="_blank" href="https://github.com/mouse0270">Robert McIntosh</a>. Please checkout the <a href="http://bootstrap-notify.remabledesigns.com/" target="_blank">full documentation.</a></p>
-
+                <h4 class="title">Notificações</h4>
             </div>
             <div class="content">
                 <div class="row">
-                    <div class="col-md-6">
-                        <h5>Notifications Style</h5>
-                        <div class="alert alert-info">
-                            <span>This is a plain notification</span>
-                        </div>
-                        <div class="alert alert-info">
-                            <button type="button" aria-hidden="true" class="close">×</button>
-                            <span>This is a notification with close button.</span>
-                        </div>
+                    <div class="col-md-12">
                         <div class="alert alert-info" data-notify="container">
                             <button type="button" aria-hidden="true" class="close">×</button>
-                            <span data-notify="icon" class="ti-bell"></span>
-                            <span data-notify="message">This is a notification with close button and icon.</span>
+                            <span (click)="goMed()" data-notify="icon" class="ti-bell"></span>
+                            <span data-notify="message">Toma de medicamento. António Silva</span>
                         </div>
-                        <div class="alert alert-info" data-notify="container">
+                        <div class="alert alert-danger" data-notify="container">
                             <button type="button" aria-hidden="true" class="close">×</button>
-                            <span data-notify="icon" class="ti-pie-chart"></span>
-                            <span data-notify="message">This is a notification with close button and icon and have many lines. You can see that the icon and the close button are always vertically aligned. This is a beautiful notification. So you don't have to worry about the style.</span>
+                            <span (click)="goGlucose()" data-notify="icon" class="ti-stats-up"></span>
+                            <span data-notify="message">Níveis de glicemia preocupantes!! António Silva</span>
                         </div>
-                    </div>
-                    <div class="col-md-6">
-                        <h5>Notification states</h5>
+                         <div class="alert alert-warning">
+                            <button type="button" aria-hidden="true" class="close">×</button>
+                            <span (click)="goNotes()" data-notify="icon" class="ti-book"></span>
+                            <span data-notify="message">Recomendo a consulta do diário de António silva. Maria</span>
+                        </div>
                         <div class="alert alert-info">
                             <button type="button" aria-hidden="true" class="close">×</button>
-                            <span><b> Info - </b> This is a regular notification made with ".alert-info"</span>
-                        </div>
-                        <div class="alert alert-success">
-                            <button type="button" aria-hidden="true" class="close">×</button>
-                            <span><b> Success - </b> This is a regular notification made with ".alert-success"</span>
-                        </div>
-                        <div class="alert alert-warning">
-                            <button type="button" aria-hidden="true" class="close">×</button>
-                            <span><b> Warning - </b> This is a regular notification made with ".alert-warning"</span>
-                        </div>
-                        <div class="alert alert-danger">
-                            <button type="button" aria-hidden="true" class="close">×</button>
-                            <span><b> Danger - </b> This is a regular notification made with ".alert-danger"</span>
+                            <span (click)="goNotes()" data-notify="icon" class="ti-book"></span>
+                            <span data-notify="message">Próximo do dia de consulta</span>
                         </div>
                     </div>
                 </div>
