--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -138,7 +138,7 @@
                                         <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route5]">Notas</button>
                                     </div>
                                     <div class="col-md-4">
-                                            <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route3]">Frequência Cardíaca</button>
+                                            <button type="submit" class="btn btn-info btn-fill btn-wd" [routerLink]="[route6]">Restrições alimentares</button>
                                         </div>
                                 </div>
                             <div class="clearfix"></div>
